--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,11 @@
 release notes for release 0.4.0 Fluorine
 ========================================
+2012-10-23 - AKHE GUID's can now be saved and loaded in configuration window.
+2012-10-22 - AKHE VSCP works now have configuration of register read/write 
+					parameters. Build: 4.0.0.2
+				  Confirm of rx-list delete can now be disabled.
+				  Numerical Base for numbers can now be configured.
+				  Log fle can be configured
 2012-10-17 - AKHE VSCP Works interfaces are now dynamic and stored by name.
 2012-10-01 - AKHE VSCP Works now handle indexed storage for dm and abstractions.
 2012-09-30 - AKHE VSCP Works now handles pages.
