--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,10 @@
 release notes for release 0.4.0 Fluorine
 ========================================
 
+2013-09-04 - AKHE Added som method to Level II drivers that can be used to
+                    serve driver specific internal web pages. Can be used for custom
+                    configuration etc.
+2013-08-30 - AKHE INternal webserver and web interface in place.
 2013-07-17 - AKHE Loglevel now 0-8. Can use numeric or tectual form.
                     
 2013-06-29 - AKHE Added clone button to session window in VSCP Works
