--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
 release notes for release 0.4.0 Fluorine
 ========================================
 
+2013-09-18 - AKHE Release 0.4.0.9 Fluorine.
 2013-09-10 - AKHE Added help/about to internal webserver internal pages.
 2013-09-10 - AKHE Fixed problem in DM fed that could cause segfault.
 2013-09-10 - AKHE Drivers can now be enabled/disabled in configuration file.
