Adding debian build folder

--- a/src/vscp/daemon/linux/openwrt/README
+++ b/src/vscp/daemon/linux/openwrt/README
@@ -15,8 +15,8 @@ libwxbase
 
 
 libmosquitto
-/network/mosqwuitto
-/network/msowuitto-client
+/network/mosquitto
+/network/msouitto-client
 libusb
 libftdi
 libsensors ????
