--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+
+release notes for release 0.5.0 Fluorine
+========================================
+
+2014-08-29 - AKHE All VSCP helper lib calls now have "vscp_" ion front of them.
+
 release notes for release 0.4.0 Fluorine
 ========================================
 
