Fixed big in filter for websockets

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Ake Hedman, akhe@grodansparadis.com, http://www.grodansparadis.com
+
+With contributions from
 Thomas Schulz
 Stefan Langer
 David Bourgeois
