--- a/src/vscp/linuxvscpl1/doc-pak/AUTHORS
+++ b/src/vscp/linuxvscpl1/doc-pak/AUTHORS
@@ -1,9 +1,2 @@
-Ake Hedman, akhe@grodansparadis.com, http://www.grodansparadis.com
+Copyright (C) 2007 Johan Hedlund,  <kungjohan@gmail.com>
 
-With contributions from
-Thomas Schulz
-Stefan Langer
-David Bourgeois
-Michael Stovenour
-Kurt Herremans
-Dinesh Guleria 
