--- a/src/vscp/linuxvscpl1/doc-pak/README
+++ b/src/vscp/linuxvscpl1/doc-pak/README
@@ -1,5 +1,11 @@
-Readme file for the the VSCP & Friends project
-http://www.vscp.org
+Readme file for the the libvscpl1 sharded library part of VSCP & friends
 
-See HISTORY for release information, BUILD_* for how to build the project.
+This is an interface to the VSCPD Level I i/f (CANAL) in the form of a shared library.
+The daemon must be started for the routines to work.
+
+
+You can find the latest relevant information about vscpcmd at
+http://www.vscp.org/docs/libvscpl1/doku.php?id=start
+
+Copyright (C) 2007 Johan Hedlund,  <kungjohan@gmail.com>
 
