--- a/src/vscp/uvscpd/doc-pak/README
+++ b/src/vscp/uvscpd/doc-pak/README
@@ -1,5 +1,5 @@
-Readme file for the the VSCP & Friends project
-http://www.vscp.org
+Readme file for the the uvscpd server program part of VSCP & friends
 
-See HISTORY for release information, BUILD_* for how to build the project.
+You can find the latest relevant information about vscpcmd at
+http://www.vscp.org/docs/uvscpd/doku.php?id=start
 
