--- a/src/vscp/vscpcmd/doc-pak/README
+++ b/src/vscp/vscpcmd/doc-pak/README
@@ -1,5 +1,5 @@
-Readme file for the the VSCP & Friends project
-http://www.vscp.org
+Readme file for the the vscpcmd program part of VSCP & friends
 
-See HISTORY for release information, BUILD_* for how to build the project.
+You can find the latest relevant information about vscpcmd at
+http://www.vscp.org/docs/vscpcmd/doku.php?id=start
 
