--- a/src/vscp/helperlib/linux/doc-pak/README
+++ b/src/vscp/helperlib/linux/doc-pak/README
@@ -1,2 +1,5 @@
+Readme file for the the libvscphelper shared library part of VSCP & friends
 
-Helper library that makes it easier to write VSCP software 
+You can find the latest relevant information about vscpcmd at
+http://www.vscp.org/docs/vscphelper/doku.php?id=start
+
