All drivers now have a common format vscpl1drv-xxxxxxxxxxx instead of vscpl1-xxxxxxxxxxxdrv Level II drivers ae prefixed with vscpl2-

--- a/src/vscp/drivers/level1/socketcan/linux/doc-pak/README
+++ b/src/vscp/drivers/level1/socketcan/linux/doc-pak/README
@@ -1,5 +1,5 @@
-Readme file for the the vscpl1-socketcandrv Level I driver,  part of VSCP & friends
+Readme file for the the vscpl1drv-socketcan Level I driver,  part of VSCP & friends
 
-You can find the latest relevant information about the vscpl1-socketcandrv Level driver at
+You can find the latest relevant information about the vscpl1drv-socketcan Level driver at
 http://www.vscp.org/docs/vscpd/doku.php?id=level1_driver_socketcan
 
