--- a/src/vscp/drivers/level1/can232/linux/doc-pak/README
+++ b/src/vscp/drivers/level1/can232/linux/doc-pak/README
@@ -1,5 +1,5 @@
-Readme file for the the vscpl1-can232drv Level I driver,  part of VSCP & friends
+Readme file for the the vscpl1drv-can232 Level I driver,  part of VSCP & friends
 
-You can find the latest relevant information about the vscpl1-can232drv Level driver at
+You can find the latest relevant information about the vscpl1drv-can232 Level driver at
 http://www.vscp.org/docs/vscpd/doku.php?id=level1_driver_can232
 
