--- a/src/vscp/drivers/level1/xap/linux/doc-pak/README
+++ b/src/vscp/drivers/level1/xap/linux/doc-pak/README
@@ -1,5 +1,5 @@
-Readme file for the the vscpl1-xapdrv Level I driver,  part of VSCP & friends
+Readme file for the the vscpl1drv-xap Level I driver,  part of VSCP & friends
 
-You can find the latest relevant information about the vscpl1-xapdrv Level driver at
+You can find the latest relevant information about the vscpl1drv-xap Level driver at
 http://www.vscp.org/docs/vscpd/doku.php?id=level1_driver_xap
 
