--- a/src/vscp/drivers/level2/rawethernet/linux/README
+++ b/src/vscp/drivers/level2/rawethernet/linux/README
@@ -13,3 +13,9 @@ _filter     - Filter for incoming events
 _mask       - Mask for incoming events
 
 
+Info about Raw ethernet communication
+=====================================
+https://austinmarton.wordpress.com/2011/09/14/sending-raw-ethernet-packets-from-a-specific-interface-in-c-on-linux/
+
+
+
