Manpages now installed in buildd script

--- a/man/vscpd.8
+++ b/man/vscpd.8
@@ -75,10 +75,11 @@ Print MIT license.
 .RE
 .SH SEE ALSO
 .PP
-\f[C]vscpworks\f[] (1).
+\f[C]uvscpd\f[] (8) \f[C]vscpworks\f[] (1).
 \f[C]vscpcmd\f[] (1).
 \f[C]vscp\-makepassword\f[] (1).
 \f[C]vscphelperlib\f[] (1).
+\f[C]vscpdrivers\f[] (7)
 .PP
 The VSCP project homepage is here <https://www.vscp.org>.
 .PP
