--- a/man/vscpworks.1
+++ b/man/vscpworks.1
@@ -20,10 +20,10 @@ New functionality is added to VSCP Works as needs arise.
 .SH SEE ALSO
 .PP
 \f[C]vscpd\f[] (8).
-\f[C]vscpcmd\f[] (1).
+\f[C]uvscpd\f[] (8) \f[C]vscpcmd\f[] (1).
 \f[C]vscp\-makepassword\f[] (1).
 \f[C]vscphelperlib\f[] (1).
-\f[C]uvscpd\f[] (8).
+\f[C]vscpdrivers\f[] (7)
 .PP
 The VSCP project homepage is here <https://www.vscp.org>.
 .PP
