--- a/man/uvscpd.8
+++ b/man/uvscpd.8
@@ -19,6 +19,7 @@ framework.
 \f[C]vscpcmd\f[] (1).
 \f[C]vscp\-makepassword\f[] (1).
 \f[C]vscphelperlib\f[] (1).
+\f[C]vscpdrivers\f[] (7).
 .PP
 The VSCP project homepage is here <https://www.vscp.org>.
 .PP
