--- a/man/vscp-mkpasswd.1
+++ b/man/vscp-mkpasswd.1
@@ -15,10 +15,11 @@ framework.
 .SH SEE ALSO
 .PP
 \f[C]vscpd\f[] (8).
-\f[C]vscpworks\f[] (1).
+\f[C]uvscpd\f[] (8) \f[C]vscpworks\f[] (1).
 \f[C]vscpcmd\f[] (1).
 \f[C]vscp\-makepasswd\f[] (1).
 \f[C]vscphelperlib\f[] (1).
+\f[C]vscpdrivers\f[] (7)
 .PP
 The VSCP project homepage is here <https://www.vscp.org>.
 .PP
