--- a/man/vscpcmd.1
+++ b/man/vscpcmd.1
@@ -15,9 +15,10 @@ system.
 .SH SEE ALSO
 .PP
 \f[C]vscpd\f[] (8).
-\f[C]vscpworks\f[] (1).
+\f[C]uvscpd\f[] (8) \f[C]vscpworks\f[] (1).
 \f[C]vscp\-makepassword\f[] (1).
 \f[C]vscphelperlib\f[] (1).
+\f[C]vscpdrivers\f[] (7)
 .PP
 The VSCP project homepage is here <https://www.vscp.org>.
 .PP
