Updated debian install

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Ake Hedman, akhe@grodansparadis.com, http://www.grodansparadis.com
+Ake Hedman, akhe@vscp.org, http://www.grodansparadis.com
 
 With contributions from
 Thomas Schulz
