--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,5 +1,5 @@
-vscpl2drv-automation%MAJOR-VERSION (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
+vscp (%MAJOR-VERSION (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
 
   * Initial release
 
- -- Ake Hedman <akhe@grodansparadis.com>  Thu, 26 Sep 2019 16:00:01 +0200
+ -- Ake Hedman <akhe@vscp.org>  Thu, 12 Dec 2019 04:32:01 +0200
