Added support for systemd and tcpd wrapper

--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,4 +1,4 @@
-vscp (%MAJOR-VERSION (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
+vscpd (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
 
   * Initial release
 
