--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -2,4 +2,4 @@ vscpd (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; u
 
   * Initial release
 
- -- Ake Hedman <akhe@vscp.org>  Mon, 20 Jan 2020 04:32:01 +0200
+ -- Ake Hedman <akhe@vscp.org>  %DATENOW
