--- a/man/vscpd.8
+++ b/man/vscpd.8
@@ -47,7 +47,7 @@ Default is /srv/vscp.
 .TP
 .B \-c path\-to\-vscpd\-config\-file
 Tell where the program should look for the configuration file.
-Default is to look for this file in /etc/vscp/vscpd.conf.
+Default is to look for this file in /etc/vscp/vscpd.json.
 .TP
 .B \-k XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX\&....
 Set the 32 byte encryption key string in hex format.
