Added method to check ipv4 /ipv6 addresses

--- a/man/vscp.7
+++ b/man/vscp.7
@@ -12,7 +12,7 @@ vscpd [\f[I]options\f[R]]
 .PP
 The VSCP daemon is an open source daemon/server program that is part of
 VSCP & Friends and is built and maintained by \[oA]ke Hedman, Grodans
-Paradis AB (https://www.grodansparadis.com).
+Paradis AB (https://www.vscp.org).
 The server act as a hub and collects information from different sources
 and let clients collect this information over a TCP/IP, websocket, REST
 interface etc and makes it easy to present or work on this date in real
