--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 Change log for the VSCP Daemon
 ==============================
 
+211114 AKHE  doCmdDataAvailable did not handle error return correctly.
 211014 AKHE  Added vscpremoteif test
 211014 AKHE  google test removed as submodule.
 211006 AKHE  Protected som eof the com class calls for Linux
