--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 Change log for the VSCP Daemon
 ==============================
 
+211105 AKHE Removed vscp_getDeviceHtmlStatusInfo from vscphelper
 211019 AKHE Updated nlohmann/json to 3.10.4
 211015 AKHE Fixed bug in session handler.
 211015 AKHE Fixed bug in doCmdReceiveEx which cause VSCP_ERROR_PARAMETER to be returned also on OK received event.
