--- a/contrib/samples/samples/win32/mfc/README
+++ b/contrib/samples/samples/win32/mfc/README
@@ -1,3 +1,15 @@
+VSCP Simple Button
+==================
+Application that show how to build a small Visual C++ application that send events through 
+the daemon interface.
+
+
+VSCP Simple Lamp
+================
+Application that show how to build a small Visual C++ application that receive events through 
+the daemon interface.
+
+
 CanalDiagnostic 
 ===============
 This was the first general message hadnling app for CANAL and was written using MFC. 
